<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Meerkat</string>

    <string name="aircraft">Aircraft</string>
    <string name="scan_wifi">Scan Wifi</string>
    <string name="wifi_network">Wifi network</string>
    <string name="callsign">Callsign</string>
    <string name="distance">Distance</string>
    <string name="bearing">Bearing</string>
    <string name="altitude">Altitude</string>
    <string name="track">Track</string>
    <string name="speed">Speed</string>
    <string name="vertical_speed">Vertical Speed</string>
    <string name="map">Map</string>
    <string name="compass">Compass</string>
    <string name="log">Log</string>
    <string name="wifi">Wifi</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="title_activity_wifi_scan">Wifi Scan</string>
    <string name="title_activity_aircraft_list">Aircraft List</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="scan">Scan</string>
    <string name="dist">Dist</string>
    <string name="brg">Brg</string>
    <string name="trk">Trk</string>
    <string name="v_speed">VS</string>
    <string name="rescan">Rescan</string>
    <string name="aircraft_list">Aircraft List</string>
    <string name="mode_c" tools:ignore="ExtraTranslation">Mode C</string>
    <string name="gps" tools:ignore="ExtraTranslation">GPS</string>
    <string name="ping">Ping</string>
    <string name="alert">Alert</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hdg">Hdg</string>
</resources>