<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_aircraft_list"
        android:icon="@drawable/ic_737"
        android:title="@string/aircraft_list"
        app:showAsAction="ifRoom"/>

    <item
    android:id="@+id/action_log"
    android:icon="@drawable/ic_log"
    android:title="@string/log"
    app:showAsAction="ifRoom"/>


    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_quit"
        android:icon="@drawable/ic_quit"
        android:title="@string/quit"
        app:showAsAction="always"/>

</menu>
