<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aircraftlist.AircraftListFragment">

    <TableLayout
        android:id="@+id/tableAircraft"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0"
        android:keepScreenOn="true"
        android:outlineProvider="bounds"
        android:showDividers="middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/callsign"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/dist"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/brg"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/altitude"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/trk"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/speed"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="@color/teal_700"
                android:breakStrategy="high_quality"
                android:outlineProvider="bounds"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/v_speed"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>