<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Light"
    tools:context=".map.MapActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:textAlignment="textEnd"
        android:textDirection="locale">

        <com.meerkat.map.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/map"
            android:keepScreenOn="true"

            android:scaleType="centerInside"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.meerkat.map.CompassView
            android:id="@+id/compassView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/compass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/compass"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/compassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/compassView"
            app:layout_constraintEnd_toStartOf="@+id/compassView"
            app:layout_constraintStart_toStartOf="@id/compassView"
            app:layout_constraintTop_toTopOf="@id/compassView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/scaleText"
            android:layout_width="500sp"
            android:layout_height="100sp"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/mapView"
            app:layout_constraintEnd_toEndOf="@+id/mapView"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.Fullscreen.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="?attr/colorSecondaryVariant"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/btnSettings"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_wrench"
                android:text="@string/settings"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/btnAircraftList"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/aircraft_list"
                android:src="@drawable/ic_737"
                android:text="@string/aircraft_list"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnLog"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/log"
                android:src="@drawable/ic_log"
                android:text="@string/log"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnQuit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/quit"
                android:src="@drawable/ic_quit"
                android:text="@string/quit"
                android:textColor="@color/black" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>