<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/BottomNavStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnicon"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="@mipmap/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_weight="100" />

        <Button
            android:id="@+id/btnquit"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_quit"
            android:drawableTint="@color/white"
            android:foregroundTint="@color/purple_200"
            android:onClick="quitClick"
            android:shadowColor="@color/black"
            android:text="@string/quit"
            android:textColor="@color/white"
            android:theme="@style/AppButton"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/buttonbar"
        style="@style/BottomNavStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/gpsstatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:textSize="10dp"
            android:text="@string/gps"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/adsbstatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:textSize="10dp"
            android:text="@string/ping"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/hdgstatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:textSize="10dp"
            android:text="@string/hdg"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/modecstatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:textSize="10dp"
            android:text="@string/mode_c"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/alertstatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:textSize="10dp"
            android:text="@string/alert"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10" />
    </LinearLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonbar"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_menu"
        style="bottomNavStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>